@@ -157,6 +157,7 @@ t/0604_Dialog_Scan.t
 t/0605_Dialog_Scan.t
 t/0606_Dialog_Scan.t
 t/0607_Dialog_Scan.t
+t/06082_Dialog_Scan.t
 t/0608_Dialog_Scan.t
 t/0609_Dialog_Scan.t
 t/0610_Dialog_Scan_Image_Sane.t
